--- a/public/index.css
+++ b/public/index.css
@@ -33,7 +33,7 @@
     cursor: pointer;
     font-size: 16px;
     height: 33px;
-    padding: 0 8px;
+    padding: 8px 8px;
     font-weight: 600;
     margin-right: 3px;
     transition: background-color 0.2s ease-out;
