--- a/public/index.css
+++ b/public/index.css
@@ -1,32 +1,30 @@
 @media screen and (min-width: 768px) {
 
-/* Global styles */
-
-:root {
+  :root {
     --background-color: #1f1f1f;
     --text-color: #f5f5f5;
     --link-color: #6c63ff;
     --accent-color: #60d1ab;
     --button-text-color: #1f1f1f;
   }
-  
+
   body {
     background-color: var(--background-color);
     color: var(--text-color);
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
   }
-  
+
   a {
     color: var(--link-color);
     text-decoration: none;
     transition: color 0.2s ease-out;
   }
-  
+
   a:hover {
     color: var(--accent-color);
   }
-  
+
   button {
     background-color: var(--accent-color);
     border: none;
@@ -40,7 +38,7 @@
     margin-right: 3px;
     transition: background-color 0.2s ease-out;
   }
-  
+
   button:hover {
     background-color: #5df3c1;
   }
@@ -52,7 +50,7 @@
   button:last-of-type {
     margin-right: 0;
   }
-  
+
   input[type="text"],
   select {
     background-color: #2e2e2e;
@@ -63,7 +61,7 @@
     padding: 0 8px;
     height: 33px;
   }
-  
+
   textarea {
     background-color: #2e2e2e;
     border: none;
@@ -73,9 +71,9 @@
     padding: 10px;
     resize: none;
   }
-  
+
   /* Specific styles */
-  
+
   ul {
     list-style-type: none;
     max-width: 1020px;
@@ -84,11 +82,11 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
   }
-  
+
   .warning {
     color: #ff4d4d;
   }
-  
+
   .word-count-warning {
     font-weight: bold;
     color: orange;
@@ -115,28 +113,141 @@
     flex: 1;
   }
 
-  #roomnameanddesc {
-    display: flex;
-  }
-  
   #deletebtn {
     cursor: pointer;
   }
-  
+
   strong {
     font-weight: 600;
   }
-  
+
   .highlight {
     padding: 2.2px 5px;
     border-radius: 3px;
     background-color: #646462;
     transition: all 0.2s ease-out;
   }
-  
+
   .highlight.remove {
     padding: 0px;
     background-color: transparent;
+  }
+
+  .circle-grid {
+    margin-top: 3.4em;
+    margin-bottom: 1em;
+    display: flex;
+    z-index: 7;
+  }
+
+  .circle-grid li img {
+    position: relative;
+    border-radius: 15px;
+    width: 3.5em;
+    height: 3.5em;
+  }
+
+  .circle-grid li .circle {
+    position: relative;
+  }
+
+  .circle-grid li .tooltip {
+    z-index: 999 !important;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    white-space: nowrap;
+    transform: translateX(-50%) translateZ(0);
+    padding: 5px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    font-size: 12px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+  }
+
+  .circle-grid li .circle:hover .tooltip {
+    z-index: 999 !important;
+    opacity: 1;
+  }
+
+  .circle-grid li {
+    width: 3.5em;
+    height: 3.5em;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+  }
+
+  #message-form {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    background-color: #272525;
+    padding: 10px 20px;
+
+  }
+
+  #message {
+    width: calc(100% - 100px);
+    border-radius: 4px;
+    border: none;
+    background-color: #2e2e2e;
+    color: var(--text-color);
+    font-size: 16px;
+    padding: 0 8px;
+    margin-right: 10px;
+  }
+
+
+  #room-settings-and-back {
+    z-index: 2;
+    position: fixed;
+    top: 8px;
+    left: 8px;
+  }
+
+  #circle-selector {
+    width: 100%;
+    z-index: 1;
+    background-color: var(--background-color);
+    height: 150px;
+    position: fixed;
+    top: 0;
+    left: 0;
+  }
+
+  #roomnameanddesc {
+    position: fixed;
+    top: 8px;
+    left: 26px;
+    z-index: 2;
+    margin-top: 5.3em;
+    display: flex;
+    width: 100%;
+  }
+
+  #messages {
+    margin-top: 10.5em;
+    width: 100vw;
+    margin-bottom: 4em;
+    margin-left: 20px;
+  }
+
+  ::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
+
+  body {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 
 }
