--- a/horizon/index.css
+++ b/horizon/index.css
@@ -145,6 +145,15 @@
     border-radius: 15px;
     width: 3.5em;
     height: 3.5em;
+    transition: all 0.18s ease-out;
+  }
+
+  .circle-grid li img:hover {
+    box-shadow: 0 0 10px gray;
+  }
+
+  .circle-grid li img.selected {
+    box-shadow: 0 0 10px gray;
   }
 
   .circle-grid li .circle {
