--- a/horizon/index.css
+++ b/horizon/index.css
@@ -364,4 +364,63 @@
     width: 25px;
   }
 
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 99999;
+    background-color: rgba(0, 0, 0, 0.767);
+  }
+  
+  .modal-content {
+    border-radius: 20px;
+    background-color: #5a5a5a;
+    margin: 15% auto;
+    padding: 20px;
+    border: 2px solid #888;
+    width: 55%;
+  }
+  
+  /* Close button */
+  .closemodal {
+    background-color: #cf3b3b;
+    color: #000;
+    text-align: center;
+    padding: 10px 20px;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+  }
+  
+  .closemodal:hover,
+  .closemodal:focus {
+    background-color: rgb(241, 84, 84);
+  }
+  
+  .modal-button {
+    background-color: var(--accent-color);
+    border: none;
+    color: var(--button-text-color);
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+  }
+
+  .modal-button:hover {
+    background-color: #8ef8d5;
+  }
+
 }
