--- a/horizon/index-mobile.css
+++ b/horizon/index-mobile.css
@@ -1,5 +1,4 @@
 @media screen and (max-width: 767px) {
-
   :root {
     --background-color: #1f1f1f;
     --text-color: #f5f5f5;
@@ -51,7 +50,13 @@
     margin-right: 0;
   }
 
+  #register-form,
+  #login-form {
+    display: none;
+  }
+
   input[type="text"],
+  input[type="password"],
   select {
     background-color: #2e2e2e;
     border: none;
@@ -128,14 +133,22 @@
     display: none;
   }
 
-  #editbtn {
+  #editbtn {}
+
+  .userpopup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #423f3f;
+    border: 1px solid #000;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
 
-  #deletebtn {
-  }
+  #deletebtn {}
 
-  #replybtn {
-  }
+  #replybtn {}
 
   .showing {
     display: inline-block;
@@ -154,8 +167,19 @@
   .highlight {
     padding: 2.2px 5px;
     border-radius: 3px;
-    background-color: #646462;
+    background-color: #a0a074;
     transition: all 0.2s ease-out;
+  }
+
+  .mention {
+    background-color: #51c2b3;
+  }
+
+  .earthymention {
+    border-radius: 2px;
+    padding-right: 2px;
+    padding-left: 2px;
+    background-color: #c28851;
   }
 
   .highlight.remove {
@@ -301,12 +325,12 @@
     border-radius: 10px;
   }
 
-  input[type=checkbox]{
+  input[type=checkbox] {
     height: 0;
     width: 0;
     visibility: hidden;
   }
-  
+
   label {
     cursor: pointer;
     text-indent: -9999px;
@@ -317,7 +341,7 @@
     border-radius: 100px;
     position: relative;
   }
-  
+
   label:after {
     content: '';
     position: absolute;
@@ -329,18 +353,96 @@
     border-radius: 90px;
     transition: 0.3s;
   }
-  
-  input:checked + label {
+
+  input:checked+label {
     background: #5994e2;
   }
-  
-  input:checked + label:after {
+
+  input:checked+label:after {
     left: calc(100% - 5px);
     transform: translateX(-100%);
   }
-  
+
   label:active:after {
     width: 25px;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    z-index: 99999;
+    background-color: rgba(0, 0, 0, 0.767);
+  }
+
+  .modal-content {
+    border-radius: 20px;
+    background-color: #5a5a5a;
+    margin: 15% auto;
+    padding: 20px;
+    border: 2px solid #888;
+    width: 55%;
+  }
+
+  /* Close button */
+  .closeLeaveNeeterModal {
+    background-color: #cf3b3b;
+    color: #000;
+    text-align: center;
+    padding: 10px 20px;
+    border: none;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+  }
+
+  .closeLeaveNeeterModal:hover,
+  .closeLeaveNeeterModal:focus {
+    background-color: rgb(241, 84, 84);
+  }
+
+  .modal-button {
+    background-color: var(--accent-color);
+    border: none;
+    color: var(--button-text-color);
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition: all 0.2s ease-out;
+  }
+
+  .modal-button:hover {
+    background-color: #8ef8d5;
+  }
+
+  .userprofilepopupinfo {
+    display: flex;
+  }
+  .userprofilepicture {
+    margin-right: 10px;
+    height: 30px;
+    width: 30px;
+    border-radius: 13%;
+  }
+  .userprofilepopupusername {
+    white-space: nowrap;
+  }
+  .userprofilepopupbio {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin-top: 60px;
   }
 
 }
