--- a/horizon/index.css
+++ b/horizon/index.css
@@ -1,5 +1,3 @@
-@media screen and (min-width: 768px) {
-
   :root {
     --background-color: #1f1f1f;
     --text-color: #f5f5f5;
@@ -78,8 +76,6 @@
     resize: none;
   }
 
-  /* Specific styles */
-
   ul {
     list-style-type: none;
     max-width: calc(100vw - 120px);
@@ -104,6 +100,7 @@
 
   #chat-window {
     display: none;
+    overflow-x: hidden;
   }
 
   #circlesettings-window {
@@ -134,8 +131,6 @@
     display: none;
   }
 
-  #editbtn {}
-
   .userpopup {
     position: fixed;
     top: 50%;
@@ -146,10 +141,6 @@
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
-
-  #deletebtn {}
-
-  #replybtn {}
 
   .showing {
     display: inline-block;
@@ -186,13 +177,6 @@
   .highlight.remove {
     padding: 0px;
     background-color: transparent;
-  }
-
-  .circle-grid {
-    margin-top: 3.4em;
-    margin-bottom: 1em;
-    display: flex;
-    z-index: 7;
   }
 
   .circle-grid li img {
@@ -235,17 +219,6 @@
   .circle-grid li .circle:hover .tooltip {
     z-index: 999 !important;
     opacity: 1;
-  }
-
-  .circle-grid li {
-    width: 3.5em;
-    height: 3.5em;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-right: 8px;
   }
 
   #message-form {
@@ -430,19 +403,58 @@
   .userprofilepopupinfo {
     display: flex;
   }
+
   .userprofilepicture {
     margin-right: 10px;
     height: 30px;
     width: 30px;
     border-radius: 13%;
   }
+
   .userprofilepopupusername {
     white-space: nowrap;
   }
+
   .userprofilepopupbio {
     display: flex;
     flex-direction: column;
     justify-content: left;
     margin-top: 60px;
   }
-}
+
+  .circle-grid {
+    position: fixed;
+    min-width: 100vw;
+    min-height: 4em;
+    top: 0;
+    left: 0;
+    margin-top: 2.5em;
+    margin-bottom: 1em;
+    display: flex;
+    z-index: 7;
+    overflow-x: auto;
+    padding-top: 12px;
+    padding-left: 12px;
+  }
+
+  .circle-grid li {
+    width: 3.5em;
+    height: 100%;
+    border-radius: 15px;
+    display: flex;
+    z-index: 8;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+  }
+
+  .circle-grid li:last-child {
+    margin-right: 3em;
+  }
+
+  @media screen and (min-width: 768px) {
+  }
+
+  @media screen and (max-width: 767px) {
+  }
