--- a/horizon/login/index.css
+++ b/horizon/login/index.css
@@ -4,6 +4,7 @@ body {
   -webkit-user-select: none;
   user-select: none;
   overflow-y: hidden;
+  overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
