Part of the message redesign

--- a/horizon/index.css
+++ b/horizon/index.css
@@ -486,6 +486,12 @@
     float: left;
   }
 
+  .replyingtocontent {
+    font-style: italic;
+    font-size: 0.8em;
+    color: paleturquoise
+  }
+
   @media screen and (min-width: 768px) {
   }
 
