--- a/horizon/style.css
+++ b/horizon/style.css
@@ -174,6 +174,13 @@ html {
   position: relative;
   margin-left: 280px;
 }
+
+b {
+  font-weight: 700;
+  font-size: 13.3px;
+  color: #7c7e80;
+}
+
 .search-bar input {
   height: 100%;
   width: 100%;
